--- a/style.css
+++ b/style.css
@@ -240,3 +240,8 @@ img.grayscale:hover {
   filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
   -webkit-filter: grayscale(0%);
 }
+
+p.allpub {display: block}
+p.allpub {display: nawa2019}
+p.allpub {display: ncn2020}
+p.allpub {display: ncn2024}
