--- a/style.css
+++ b/style.css
@@ -184,6 +184,15 @@ p {
   margin-right: 10px;
 }
 
+.twotabinfo {
+  display: grid;
+  align-items: center; 
+  grid-template-columns: 175px auto;
+  width: 750px;
+  margin: 0 auto;
+  text-align: justify;
+}
+
 .twotab {
   display: grid;
   align-items: center; 
@@ -211,21 +220,6 @@ p {
   text-decoration: underline;
   text-decoration-thickness: 2px;
   text-underline-offset: 5px;
-}
-
-.tooltip {
-  text-decoration:none;
-  position:relative;
-}
-
-.tooltip span {
-  display:none;
-}
-
-.tooltip:hover span {
-  display:block;
-  position:fixed;
-  overflow:hidden;
 }
 
 img.grayscale {
