--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Avenir, sans-serif;
   color: #444;
@@ -74,14 +73,14 @@ p {
   left: 0;
   right: 0;
   top: 0;
-  height: 150px;
+  height: 145px;
   color: #ffffff;
 }
 
 .navigation {
   width: auto;
   position: absolute;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-left: 25px;
   text-align: center;
   word-spacing: 25px;
@@ -96,6 +95,7 @@ p {
   align-items: center; 
   grid-template-columns: 500px 300px;
   margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .header a {
@@ -237,3 +237,11 @@ img.grayscale:hover {
 p.headnawa2019 {display: none;}
 p.headncn2020 {display: none;}
 p.headncn2024 {display: none;}
+
+#scroll-progress {
+  top: 0;
+  width: 0%;
+  height: 5px;
+  background: #ffffff;
+  z-index: 10000;
+}
