--- a/moth/style.css
+++ b/moth/style.css
@@ -126,6 +126,7 @@ header[data-parallax=group] {
 }
 
 .preamble {
+  z-index: 100;
   background-color: white;
   box-shadow: 0 0 10vh rgba(0, 0, 0, 0.8);
 }
