--- a/moth/style.css
+++ b/moth/style.css
@@ -253,34 +253,7 @@ header[data-parallax=group] {
   text-align: center;
 }
 
-/* ------------------------------------ 
-
-footer {
-  min-height: 100vh;
-  text-align: left;
-  background-color: #260041;
-  color: #ede6f3;
+.divtext {
+  margin-top:10vmin;
+  margin-bottom:5vmin
 }
-footer h3 {
-  margin-bottom: 4rem;
-  transform: skewY(-10deg);
-  font-size: 10vw;
-  line-height: 0.85;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: -0.05em;
-}
-footer h3 small {
-  display: block;
-  font-size: 5vw;
-  letter-spacing: 0.24em;
-}
-footer p {
-  width: 70%;
-  margin-top: 1em;
-}
-footer a {
-  color: #c9b3da;
-}
-
-*/
