--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h3 {
   text-align: left;
   letter-spacing: 2px;
   font-weight: 500;
-  border-bottom: 2px solid #aaaaaa;
+  border-bottom: 2px solid #000000;
   position: relative;
   margin-left: 5px;
   margin-right: 5px;
@@ -116,38 +116,31 @@ p {
 }
 
 .info {
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
   background: #ffffff;
-  border: 2px solid #dddddd;
-}
-
-.teaching {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background: #ffffff;
-  border: 2px solid #dddddd;
+  border: 2px solid #ffffff;
 }
 
 .research {
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
   background: #ffffff;
-  border: 2px solid #dddddd;
+  border: 2px solid #ffffff;
 }
 
 .funding {
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
   background: #ffffff;
-  border: 2px solid #dddddd;
+  border: 2px solid #ffffff;
 }
 
 .publications {
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 40px;
   background: #ffffff;
-  border: 2px solid #dddddd;
+  border: 2px solid #ffffff;
 }
 
 .footer {
