--- a/style.css
+++ b/style.css
@@ -60,7 +60,17 @@ p {
   margin-right: 20px;
 }
 
-.header {
+ .headerbackground {
+  position: fixed;
+  background: #be1723;
+  width: 100%;
+  height: 145px;
+  left: 0;
+  right: 0;
+  top: 0;
+ }
+
+ .header {
   position: fixed;
   background: #be1723;
   max-width: fit-content;
@@ -158,6 +168,7 @@ p {
   font-weight: normal;
   text-align: center;
   line-height: 30px;
+  width: 100%;
 }
 
 .twotabinfo {
