--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ img.grayscale:hover {
 p.headnawa2019 {display: none;}
 p.headncn2020 {display: none;}
 p.headncn2024 {display: none;}
+p.headjsps2026 {display: none;}
 
 #scroll-progress {
   top: 0;
