--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h3 {
   position: relative;
   margin-left: 5px;
   margin-right: 5px;
+  text-shadow: 2px 2px 4px #DCE0E2;
 }
 
 a {
@@ -95,6 +96,7 @@ p {
   font-weight:550;
   font-size: 15px;
   color: white;
+  text-shadow: 2px 2px 4px black;
 }
 
 .headertab {
@@ -103,6 +105,7 @@ p {
   grid-template-columns: 500px 300px;
   margin-top: 10px;
   margin-bottom: 5px;
+  text-shadow: 2px 2px 4px black;
 }
 
 .header a {
@@ -162,6 +165,7 @@ p {
   text-align: center;
   line-height: 30px;
   width: 100%;
+  text-shadow: 2px 2px 4px black;
 }
 
 .twotabinfo {
